Readme file updated